@@ -1,3 +1,7 @@
+2025-12-10  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el (vc-svn-global-switches): Do not set anymore.
+
 2025-11-25  Zhengyi Fu  <i@fuzy.me>
 
 	* setup.sh: Add some hooks.
